[metadata]
name = mchapi
version = attr:mchapi.__version__
author = saho
description = mch api wrapper
long_description = file:README.md
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    mch
    api
[options]
zip_safe = False
packages = find:
install_requires =
    bs4
    requests
    pytz
